--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&display=swap" rel="stylesheet">
+
+
+    <meta name="author" content="Arkajyoti Roy">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Arka,Arkajyoti,Arkajyoti Roy,Roy,Udaipur,Tripura,Gomati,Techno,Workstream,Jobhunt,Web,Web Developer,Software,Developer,arka,arkajyoti,roy,">
+
+
     <style>
       body {
           -webkit-user-select: none; /* Safari */
